# fastapi-test-project

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  config.py  conftest.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-dev.yml  deploy.yml
tests/: __init__.py  test_main.py
